src/grammar/.antlr/TyCParser.py
# Generated from c:/Users/PREDATOR/Downloads/BTL_4_1_HK252_TyC-main/BTL_4_HK252_TyC-main/src/grammar/TyC.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class TyCParser ( Parser ):

    grammarFileName = "TyC.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'auto'", "'break'", "'case'", "'continue'", 
                     "'default'", "'else'", "'float'", "'for'", "'if'", 
                     "'int'", "'return'", "'string'", "'struct'", "'switch'", 
                     "'void'", "'while'", "'||'", "'&&'", "'=='", "'!='", 
                     "'<='", "'>='", "'++'", "'--'", "'+'", "'-'", "'*'", 
                     "'/'", "'%'", "'<'", "'>'", "'!'", "'='", "'.'", "'{'", 
                     "'}'", "'('", "')'", "';'", "','", "':'" ]

    symbolicNames = [ "<INVALID>", "AUTO", "BREAK", "CASE", "CONTINUE", 
                      "DEFAULT", "ELSE", "FLOAT", "FOR", "IF", "INT", "RETURN", 
                      "STRING", "STRUCT", "SWITCH", "VOID", "WHILE", "OR", 
                      "AND", "EQ", "NE", "LE", "GE", "INCRE", "DECRE", "ADD", 
                      "SUB", "MUL", "DIV", "MOD", "LT", "GT", "NOT", "ASS", 
                      "MEMACC", "LB", "RB", "LP", "RP", "SEMI", "COMMA", 
                      "COLON", "ID", "INT_LITERAL", "FLOAT_LITERAL", "STRING_LITERAL", 
                      "LINE_COMMENT", "BLOCK_COMMENT", "WS", "UNCLOSE_STRING", 
                      "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_literal = 0
    RULE_expression = 1
    RULE_assignment_expression = 2
    RULE_logical_or_expression = 3
    RULE_logical_and_expression = 4
    RULE_equality_expression = 5
    RULE_relational_expression = 6
    RULE_additive_expression = 7
    RULE_multiplicative_expression = 8
    RULE_unary_expression = 9
    RULE_non_prefix_unary = 10
    RULE_prefix_incdec = 11
    RULE_incdec_expression = 12
    RULE_postfix_tail = 13
    RULE_postfix_expression = 14
    RULE_primary_postfix = 15
    RULE_non_call_primary = 16
    RULE_lvalue = 17
    RULE_function_call = 18
    RULE_primary_expression = 19
    RULE_argument_list = 20
    RULE_type = 21
    RULE_return_type = 22
    RULE_statement = 23
    RULE_block_statement = 24
    RULE_var_statement = 25
    RULE_assign_statement = 26
    RULE_member_base = 27
    RULE_member_access = 28
    RULE_assign_lhs = 29
    RULE_if_statement = 30
    RULE_while_statement = 31
    RULE_for_statement = 32
    RULE_for_init = 33
    RULE_for_update = 34
    RULE_switch_statement = 35
    RULE_switch_body = 36
    RULE_case_clause = 37
    RULE_default_clause = 38
    RULE_break_statement = 39
    RULE_continue_statement = 40
    RULE_return_statement = 41
    RULE_program = 42
    RULE_struct_init = 43
    RULE_struct_decl = 44
    RULE_struct_member = 45
    RULE_function_decl = 46
    RULE_param_list = 47
    RULE_param = 48

    ruleNames =  [ "literal", "expression", "assignment_expression", "logical_or_expression", 
                   "logical_and_expression", "equality_expression", "relational_expression", 
                   "additive_expression", "multiplicative_expression", "unary_expression", 
                   "non_prefix_unary", "prefix_incdec", "incdec_expression", 
                   "postfix_tail", "postfix_expression", "primary_postfix", 
                   "non_call_primary", "lvalue", "function_call", "primary_expression", 
                   "argument_list", "type", "return_type", "statement", 
                   "block_statement", "var_statement", "assign_statement", 
                   "member_base", "member_access", "assign_lhs", "if_statement", 
                   "while_statement", "for_statement", "for_init", "for_update", 
                   "switch_statement", "switch_body", "case_clause", "default_clause", 
                   "break_statement", "continue_statement", "return_statement", 
                   "program", "struct_init", "struct_decl", "struct_member", 
                   "function_decl", "param_list", "param" ]

    EOF = Token.EOF
    AUTO=1
    BREAK=2
    CASE=3
    CONTINUE=4
    DEFAULT=5
    ELSE=6
    FLOAT=7
    FOR=8
    IF=9
    INT=10
    RETURN=11
    STRING=12
    STRUCT=13
    SWITCH=14
    VOID=15
    WHILE=16
    OR=17
    AND=18
    EQ=19
    NE=20
    LE=21
    GE=22
    INCRE=23
    DECRE=24
    ADD=25
    SUB=26
    MUL=27
    DIV=28
    MOD=29
    LT=30
    GT=31
    NOT=32
    ASS=33
    MEMACC=34
    LB=35
    RB=36
    LP=37
    RP=38
    SEMI=39
    COMMA=40
    COLON=41
    ID=42
    INT_LITERAL=43
    FLOAT_LITERAL=44
    STRING_LITERAL=45
    LINE_COMMENT=46
    BLOCK_COMMENT=47
    WS=48
    UNCLOSE_STRING=49
    ILLEGAL_ESCAPE=50
    ERROR_CHAR=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class LiteralContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT_LITERAL(self):
            return self.getToken(TyCParser.INT_LITERAL, 0)

        def FLOAT_LITERAL(self):
            return self.getToken(TyCParser.FLOAT_LITERAL, 0)

        def STRING_LITERAL(self):
            return self.getToken(TyCParser.STRING_LITERAL, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_literal




    def literal(self):

        localctx = TyCParser.LiteralContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_literal)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 61572651155456) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignment_expression(self):
            return self.getTypedRuleContext(TyCParser.Assignment_expressionContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_expression




    def expression(self):

        localctx = TyCParser.ExpressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_expression)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.assignment_expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assignment_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_lhs(self):
            return self.getTypedRuleContext(TyCParser.Assign_lhsContext,0)


        def ASS(self):
            return self.getToken(TyCParser.ASS, 0)

        def assignment_expression(self):
            return self.getTypedRuleContext(TyCParser.Assignment_expressionContext,0)


        def logical_or_expression(self):
            return self.getTypedRuleContext(TyCParser.Logical_or_expressionContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_assignment_expression




    def assignment_expression(self):

        localctx = TyCParser.Assignment_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assignment_expression)
        try:
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.assign_lhs()
                self.state = 103
                self.match(TyCParser.ASS)
                self.state = 104
                self.assignment_expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.logical_or_expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_or_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def logical_and_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.Logical_and_expressionContext)
            else:
                return self.getTypedRuleContext(TyCParser.Logical_and_expressionContext,i)


        def OR(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.OR)
            else:
                return self.getToken(TyCParser.OR, i)

        def getRuleIndex(self):
            return TyCParser.RULE_logical_or_expression




    def logical_or_expression(self):

        localctx = TyCParser.Logical_or_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_logical_or_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.logical_and_expression()
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==17:
                self.state = 110
                self.match(TyCParser.OR)
                self.state = 111
                self.logical_and_expression()
                self.state = 116
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_and_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def equality_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.Equality_expressionContext)
            else:
                return self.getTypedRuleContext(TyCParser.Equality_expressionContext,i)


        def AND(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.AND)
            else:
                return self.getToken(TyCParser.AND, i)

        def getRuleIndex(self):
            return TyCParser.RULE_logical_and_expression




    def logical_and_expression(self):

        localctx = TyCParser.Logical_and_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_logical_and_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117
            self.equality_expression()
            self.state = 122
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 118
                self.match(TyCParser.AND)
                self.state = 119
                self.equality_expression()
                self.state = 124
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Equality_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relational_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.Relational_expressionContext)
            else:
                return self.getTypedRuleContext(TyCParser.Relational_expressionContext,i)


        def EQ(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.EQ)
            else:
                return self.getToken(TyCParser.EQ, i)

        def NE(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.NE)
            else:
                return self.getToken(TyCParser.NE, i)

        def getRuleIndex(self):
            return TyCParser.RULE_equality_expression




    def equality_expression(self):

        localctx = TyCParser.Equality_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_equality_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 125
            self.relational_expression()
            self.state = 130
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==19 or _la==20:
                self.state = 126
                _la = self._input.LA(1)
                if not(_la==19 or _la==20):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 127
                self.relational_expression()
                self.state = 132
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Relational_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def additive_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.Additive_expressionContext)
            else:
                return self.getTypedRuleContext(TyCParser.Additive_expressionContext,i)


        def LT(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.LT)
            else:
                return self.getToken(TyCParser.LT, i)

        def LE(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.LE)
            else:
                return self.getToken(TyCParser.LE, i)

        def GT(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.GT)
            else:
                return self.getToken(TyCParser.GT, i)

        def GE(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.GE)
            else:
                return self.getToken(TyCParser.GE, i)

        def getRuleIndex(self):
            return TyCParser.RULE_relational_expression




    def relational_expression(self):

        localctx = TyCParser.Relational_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_relational_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.additive_expression()
            self.state = 138
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 3227516928) != 0):
                self.state = 134
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 3227516928) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 135
                self.additive_expression()
                self.state = 140
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Additive_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplicative_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.Multiplicative_expressionContext)
            else:
                return self.getTypedRuleContext(TyCParser.Multiplicative_expressionContext,i)


        def ADD(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.ADD)
            else:
                return self.getToken(TyCParser.ADD, i)

        def SUB(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.SUB)
            else:
                return self.getToken(TyCParser.SUB, i)

        def getRuleIndex(self):
            return TyCParser.RULE_additive_expression




    def additive_expression(self):

        localctx = TyCParser.Additive_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_additive_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.multiplicative_expression()
            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25 or _la==26:
                self.state = 142
                _la = self._input.LA(1)
                if not(_la==25 or _la==26):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 143
                self.multiplicative_expression()
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Multiplicative_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def unary_expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(TyCParser.Unary_expressionContext)
            else:
                return self.getTypedRuleContext(TyCParser.Unary_expressionContext,i)


        def MUL(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.MUL)
            else:
                return self.getToken(TyCParser.MUL, i)

        def DIV(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.DIV)
            else:
                return self.getToken(TyCParser.DIV, i)

        def MOD(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.MOD)
            else:
                return self.getToken(TyCParser.MOD, i)

        def getRuleIndex(self):
            return TyCParser.RULE_multiplicative_expression




    def multiplicative_expression(self):

        localctx = TyCParser.Multiplicative_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_multiplicative_expression)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 149
            self.unary_expression()
            self.state = 154
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 939524096) != 0):
                self.state = 150
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 939524096) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 151
                self.unary_expression()
                self.state = 156
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Unary_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADD(self):
            return self.getToken(TyCParser.ADD, 0)

        def unary_expression(self):
            return self.getTypedRuleContext(TyCParser.Unary_expressionContext,0)


        def SUB(self):
            return self.getToken(TyCParser.SUB, 0)

        def NOT(self):
            return self.getToken(TyCParser.NOT, 0)

        def incdec_expression(self):
            return self.getTypedRuleContext(TyCParser.Incdec_expressionContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_unary_expression




    def unary_expression(self):

        localctx = TyCParser.Unary_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_unary_expression)
        try:
            self.state = 164
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [25]:
                self.enterOuterAlt(localctx, 1)
                self.state = 157
                self.match(TyCParser.ADD)
                self.state = 158
                self.unary_expression()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.match(TyCParser.SUB)
                self.state = 160
                self.unary_expression()
                pass
            elif token in [32]:
                self.enterOuterAlt(localctx, 3)
                self.state = 161
                self.match(TyCParser.NOT)
                self.state = 162
                self.unary_expression()
                pass
            elif token in [23, 24, 35, 37, 42, 43, 44, 45]:
                self.enterOuterAlt(localctx, 4)
                self.state = 163
                self.incdec_expression()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Non_prefix_unaryContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def incdec_expression(self):
            return self.getTypedRuleContext(TyCParser.Incdec_expressionContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_non_prefix_unary




    def non_prefix_unary(self):

        localctx = TyCParser.Non_prefix_unaryContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_non_prefix_unary)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 166
            self.incdec_expression()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Prefix_incdecContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INCRE(self):
            return self.getToken(TyCParser.INCRE, 0)

        def non_prefix_unary(self):
            return self.getTypedRuleContext(TyCParser.Non_prefix_unaryContext,0)


        def DECRE(self):
            return self.getToken(TyCParser.DECRE, 0)

        def getRuleIndex(self):
            return TyCParser.RULE_prefix_incdec




    def prefix_incdec(self):

        localctx = TyCParser.Prefix_incdecContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_prefix_incdec)
        try:
            self.state = 172
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.match(TyCParser.INCRE)
                self.state = 169
                self.non_prefix_unary()
                pass
            elif token in [24]:
                self.enterOuterAlt(localctx, 2)
                self.state = 170
                self.match(TyCParser.DECRE)
                self.state = 171
                self.non_prefix_unary()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Incdec_expressionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def prefix_incdec(self):
            return self.getTypedRuleContext(TyCParser.Prefix_incdecContext,0)


        def postfix_tail(self):
            return self.getTypedRuleContext(TyCParser.Postfix_tailContext,0)


        def postfix_expression(self):
            return self.getTypedRuleContext(TyCParser.Postfix_expressionContext,0)


        def getRuleIndex(self):
            return TyCParser.RULE_incdec_expression




    def incdec_expression(self):

        localctx = TyCParser.Incdec_expressionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_incdec_expression)
        try:
            self.state = 178
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23, 24]:
                self.enterOuterAlt(localctx, 1)
                self.state = 174
                self.prefix_incdec()
                self.state = 175
                self.postfix_tail()
                pass
            elif token in [35, 37, 42, 43, 44, 45]:
                self.enterOuterAlt(localctx, 2)
                self.state = 177
                self.postfix_expression(0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Postfix_tailContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INCRE(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.INCRE)
            else:
                return self.getToken(TyCParser.INCRE, i)

        def DECRE(self, i:int=None):
            if i is None:
                return self.getTokens(TyCParser.DECRE)
            else:
                return self.getToken(TyCParser.DECRE, i)

        def getRuleIndex(self):
            return TyCParser.RULE_postfix_tail




    def postfix_tail(self):

        localctx = TyCParser.Postfix_tailContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_postfix_tail)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 180
                    _la = self._input.LA(1)
                    if not(_la==23 or _la==24):
                        self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume() 
                self.state = 185
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Postfix_expressionContext(ParserRuleContext):
        __slots__ = 'parser'
